// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login matches snapshot 1`] = `
<div
  className="sc-fznyAO iEXDFt"
>
  <form
    className="sc-AxhUy dLXkxw"
    data-testid="login"
    noValidate={true}
    onSubmit={[Function]}
  >
    <h3>
      Login
    </h3>
    <label
      className="sc-Axmtr fYuxyA"
    >
      Email
       
      <input
        className="sc-AxmLO erTjTr"
        id="email"
        name="email"
        onChange={[Function]}
        required={true}
        type="email"
        value=""
      />
    </label>
    <label
      className="sc-Axmtr fYuxyA"
    >
      Password
       
      <input
        className="sc-AxmLO erTjTr"
        id="password"
        name="password"
        onChange={[Function]}
        required={true}
        type="password"
        value=""
      />
    </label>
    <button
      className="sc-AxirZ sc-AxheI cOblFm"
      type="submit"
    >
      Submit
    </button>
    <button
      className="sc-AxjAm sc-AxgMl bwgmuq"
      type="button"
    >
      Forgot password
    </button>
  </form>
  <div
    className="sc-fznKkj hMwGys"
  >
    <img
      alt="woman working at desk"
      src="illustration-working.svg"
    />
  </div>
</div>
`;

exports[`logout matches snapshot 1`] = `
<div
  className="sc-fznyAO iEXDFt"
>
  <form
    className="sc-AxhUy dLXkxw"
    data-testid="logout"
  >
    <h3>
      Are you sure you want to logout?
    </h3>
    <button
      className="sc-AxirZ sc-AxheI cOblFm"
      onClick={[Function]}
    >
      Yes
    </button>
    <button
      className="sc-AxirZ sc-AxheI cOblFm"
    >
      <a
        href="/dashboard"
        onClick={[Function]}
      >
        No
      </a>
    </button>
  </form>
  <div
    className="sc-fznKkj hMwGys"
  >
    <img
      alt="woman working at desk"
      src="illustration-working.svg"
    />
  </div>
</div>
`;

exports[`signup matches snapshot 1`] = `
<div
  className="sc-fznyAO iEXDFt"
>
  <form
    className="sc-AxhUy dLXkxw"
    data-testid="signup"
    noValidate={true}
    onSubmit={[Function]}
  >
    <h3>
      Sign Up
    </h3>
    <label
      className="sc-Axmtr fYuxyA"
    >
      First Name
       
      <input
        className="sc-AxmLO erTjTr"
        id="firstName"
        name="firstName"
        onChange={[Function]}
        required={true}
        value=""
      />
    </label>
    <label
      className="sc-Axmtr fYuxyA"
    >
      Last Name
       
      <input
        className="sc-AxmLO erTjTr"
        id="lastName"
        name="lastName"
        onChange={[Function]}
        required={true}
        value=""
      />
    </label>
    <label
      className="sc-Axmtr fYuxyA"
    >
      Email
       
      <input
        className="sc-AxmLO erTjTr"
        id="email"
        name="email"
        onChange={[Function]}
        required={true}
        type="email"
        value=""
      />
    </label>
    <label
      className="sc-Axmtr fYuxyA"
    >
      Password
       
      <input
        className="sc-AxmLO erTjTr"
        id="password"
        name="password"
        onChange={[Function]}
        pattern=""
        required={true}
        type="password"
        value=""
      />
    </label>
    <label
      className="sc-Axmtr fYuxyA"
    >
      Confirm your password
       
      <input
        className="sc-AxmLO erTjTr"
        id="password2"
        name="password2"
        onChange={[Function]}
        pattern=""
        required={true}
        type="password"
        value=""
      />
    </label>
    <button
      className="sc-AxirZ sc-AxheI cOblFm"
      type="submit"
    >
      Sign up
    </button>
  </form>
  <div
    className="sc-fznKkj hMwGys"
  >
    <img
      alt="woman working at desk"
      src="illustration-working.svg"
    />
  </div>
</div>
`;
